--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ scikit-image==0.16.2
 scikit-learn==0.22.1
 scikit-video==1.1.11
 scipy==1.1.0
-segmentation-models==1.0.1
+segmentation-models
 sip==4.19.8
 six==1.15.0
 tables==3.6.1
